2007-05-03  Behdad Esfahbod  <behdad@gnome.org>

	* glib/glib.symbols:
	* glib/gunicode.h:
	* glib/guniprop.c (g_unichar_ismark):
	Add g_unichar_ismark(). Patch from Yevgen Muntyan. Fixes #339991.

2007-05-03  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.1 ===

2007-05-02  Matthias Clasen <mclasen@redhat.com>

	* tests/threadpool-test.c:  Stop unused threads before
	the last test, to make the test terminate reliably.

	* NEWS: Updates

2007-05-02  Marco Barisione <marco@barisione.org>

	* glib/gregex.c: Made more clear that the string passed to the match
	functions cannot be freed before using g_match_info_fetch() and
	similar functions, and fixed a typo.

2007-04-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/gregex.[hc]: Add g_regex_get_max_backref() and
	g_regex_get_capture_count().  (#419371, Marco Barisione)
	
2007-04-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/gregex.[hc]: Split GRegex into GRegex and GMatchInfo.
	(#419368, Marco Barisione)

	* tests/regex-test.c: Adapt.

2007-04-30  Chris Wilson  <chris@chris-wilson.co.uk>

	* glib/gbookmarkfile.c (g_bookmark_file_get_app_info):
	Include the gshell.h header file (to define g_shell_[un]quote)
	and correct the order of the arguments to g_propagate_error(), as
	spotted by gcc.

2007-04-29  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gbookmarkfile.c:
	(g_bookmark_file_set_app_info): Quote the passed command line...
	
	(g_bookmark_file_get_app_info): ... and unquote it when giving it
	back. (#432274)

2007-04-27  Matthias Clasen <mclasen@redhat.com>

	* glib/gstrfuncs.c: small coding style cleanups.

2007-04-27  Chris Wilson  <chris@chris-wilson.co.uk>

	* glib/gregex.h: Remove trailing comma at end of enumerator list.

2007-04-27  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.c (g_mkdir): Document that the mode argument is
	ignored on Windows
	(g_stat): Document that st_mode is mostly useless on Windows.
